incorporate PR feedback